<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:gravity="center"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="31">

        <TextView
            android:id="@+id/profileBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="19"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDelete"
            style="?android:attr/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="3"
            android:text="@string/textDelete" />

        <Button
            android:id="@+id/btnInfo"
            style="?android:attr/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="2"
            android:text="@string/textInfo" />

    </LinearLayout>
</LinearLayout>